--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,30 +8,30 @@
     tools:context="kasembhundit.kutthareeya.thiti.manageres.MainActivity">
 
     <RelativeLayout
-        android:background="@color/colorPrimary"
-        android:padding="@dimen/padding20"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/padding20">
 
         <ImageView
-            android:src="@mipmap/ic_app"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_app" />
 
         <TextView
-            android:textColor="@color/textcolorPrimary"
-            android:layout_centerInParent="true"
-            android:textStyle="bold"
-            android:textSize="@dimen/h1"
-            android:text="@string/app_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/app_name"
+            android:textColor="@color/textcolorPrimary"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
 
         <ImageView
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_authen"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/ic_authen" />
 
 
     </RelativeLayout>
@@ -39,6 +39,7 @@
     <ListView
         android:id="@+id/LivNews"
         android:layout_width="match_parent"
+        
         android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
