--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1e88e5</color>
+    <color name="colorPrimary">#ffa000</color>
     <color name="textcolorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#005cb2</color>
-    <color name="colorPrimaryLight">#6ab7ff</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#c67100</color>
+    <color name="colorPrimaryLight">#ffd149</color>
+    <color name="colorAccent"></color>
 </resources>
