--- a/app/src/main/res/layout/activity_authen.xml
+++ b/app/src/main/res/layout/activity_authen.xml
@@ -1,9 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kasembhundit.kutthareeya.thiti.manageres.AuthenActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+
+    <RelativeLayout
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/padding20"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:src="@mipmap/ic_authen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:textSize="@dimen/h1"
+            android:textColor="@color/textcolorPrimary"
+            android:layout_centerInParent="true"
+            android:text="@string/login"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+
+        android:layout_marginTop="@dimen/dp80"
+        android:layout_marginRight="@dimen/margin30"
+        android:layout_marginLeft="@dimen/margin30"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+<
+
+        <ImageView
+          android:src="res/@drawable-xxhdpi/logo300.png"
+            android:scaleType="centerInside"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
+
+
+    <Button
+        android:background="@color/colorSecondary"
+        android:textColor="@color/textcolorPrimary"
+        android:layout_alignParentBottom="true"
+        android:text="@string/login"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
