--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -15,12 +15,13 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:src="@mipmap/ic_app"
+            android:src="@mipmap/ic_news"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:textSize="@dimen/h1"
+            android:textStyle="bold"
             android:textColor="@color/textcolorPrimary"
             android:layout_centerInParent="true"
             android:text="@string/title"
