--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffa000</color>
+    <color name="colorPrimary">#dd2c00</color>
     <color name="textcolorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#c67100</color>
-    <color name="colorPrimaryLight">#ffd149</color>
-    <color name="colorAccent"></color>
+    <color name="colorPrimaryDark">#a30000</color>
+    <color name="colorPrimaryLight">#ff6434</color>
+    <color name="colorAccent">#c9c8c4</color>
+
+    <color name="colorSecondary">#64dd17</color>
+    <color name="colorSecondaryDark">#1faa00</color>
+    <color name="colorSecondaryLight">#9cff57</color>
 </resources>
