--- a/app/src/main/res/layout/activity_authen.xml
+++ b/app/src/main/res/layout/activity_authen.xml
@@ -7,60 +7,56 @@
     tools:context="kasembhundit.kutthareeya.thiti.manageres.AuthenActivity">
 
 
-
     <RelativeLayout
-        android:background="@color/colorPrimary"
-        android:padding="@dimen/padding20"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/padding20">
 
         <ImageView
-            android:src="@mipmap/ic_authen"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_authen" />
 
         <TextView
-            android:textSize="@dimen/h1"
-            android:textColor="@color/textcolorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/login"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textColor="@color/textcolorPrimary"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
     <LinearLayout
 
-        android:layout_marginTop="@dimen/dp80"
-        android:layout_marginRight="@dimen/margin30"
-        android:layout_marginLeft="@dimen/margin30"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin30"
+        android:layout_marginRight="@dimen/margin30"
+        android:layout_marginTop="@dimen/dp80"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-<
+
 
         <ImageView
-          android:src="res/@drawable-xxhdpi/logo300.png"
-            android:scaleType="centerInside"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside" />
 
     </LinearLayout>
 
 
-
-
     <Button
-        android:background="@color/colorSecondary"
-        android:textColor="@color/textcolorPrimary"
-        android:layout_alignParentBottom="true"
-        android:text="@string/login"
-        android:textSize="20dp"
-        android:textStyle="bold"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorSecondary"
+        android:text="@string/login"
+        android:textColor="@color/textcolorPrimary"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
