--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="dp80">80dp</dimen>
     <dimen name="size20">20sp</dimen>
     <dimen name="dp120">120dp</dimen>
+    <dimen name="icon">100dp</dimen>
 </resources>
