--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,11 @@
             android:layout_centerInParent="true"
             android:text="@string/app_name"
             android:textColor="@color/textcolorPrimary"
-            android:textSize="@dimen/h1"
+            android:textSize="@dimen/dp25"
             android:textStyle="bold" />
 
         <ImageView
+            android:id="@+id/imvAuthen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
