--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_app" />
+            android:src="@mipmap/ic_app1"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
             android:layout_centerInParent="true"
             android:text="@string/app_name"
             android:textColor="@color/textcolorPrimary"
-            android:textSize="@dimen/dp25"
+            android:textSize="@dimen/sp23"
             android:textStyle="bold" />
 
         <ImageView
