--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="dp120">120dp</dimen>
     <dimen name="icon">100dp</dimen>
     <dimen name="dp25">25dp</dimen>
+    <dimen name="dp200">200dp</dimen>
+    <dimen name="dp250">250dp</dimen>
+    <dimen name="sp23">23sp</dimen>
 </resources>
