--- a/app/src/main/res/layout/activity_authen.xml
+++ b/app/src/main/res/layout/activity_authen.xml
@@ -37,17 +37,21 @@
     </LinearLayout>
 
     <EditText
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorPrimary"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/dp200"
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="13"
-        android:inputType="textPersonName"
-        android:text="@string/username" />
+        android:inputType="text"
+       android:hint="@string/username"/>
 
 
     <EditText
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorPrimary"
         android:layout_marginTop="@dimen/dp250"
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
@@ -55,7 +59,7 @@
         android:ems="13"
         android:inputType="textPassword"
         android:layout_centerHorizontal="true"
-        android:text="@string/password"/>
+        android:hint="@string/password"/>
 
     <TextView
 
@@ -64,7 +68,7 @@
         android:text="@string/caption"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/size20"
-        android:id="@+id/textView"
+        android:id="@+id/txtRegister"
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/dp25" />
