--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,9 @@
     <dimen name="dp200">200dp</dimen>
     <dimen name="dp250">250dp</dimen>
     <dimen name="sp23">23sp</dimen>
+    <dimen name="dp100">100dp</dimen>
+    <dimen name="dp150">150dp</dimen>
+    <dimen name="dp300">300dp</dimen>
+    <dimen name="dp70">70dp</dimen>
+    <dimen name="dp60">60dp</dimen>
 </resources>
