--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_back" />
+            android:src="@drawable/back2" />
 
         <TextView
             android:id="@+id/textView2"
@@ -35,8 +35,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/btnRegister"
-        android:layout_below="@id/realTop"
+        android:layout_above="@+id/btnRegister"
+        android:layout_below="@+id/realTop"
         android:orientation="vertical"
         android:padding="@dimen/padding20">
 
