--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,6 +15,7 @@
         android:padding="@dimen/padding20">
 
         <ImageView
+            android:id="@+id/imvBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back2" />
