--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,10 +35,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/btnRegister"
-        android:layout_below="@+id/realTop"
         android:orientation="vertical"
-        android:padding="@dimen/padding20">
+        android:padding="@dimen/padding20"
+        android:layout_below="@+id/realTop"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
