--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="padding20">20dp</dimen>
+    <dimen name="padding10">10dp</dimen>
     <dimen name="h1">30sp</dimen>
     <dimen name="h2">20sp</dimen>
     <dimen name="margin30">30dp</dimen>
