--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -76,28 +76,28 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="@dimen/dp10">
-<!--Show Infomarion-->
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+            <!--Show Infomarion-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/txtUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp25"
-        android:text="ผู้ใช้ : "
-        android:textSize="@dimen/h2"
-        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/txtUser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp25"
+                    android:text="ผู้ใช้ : "
+                    android:textSize="@dimen/h2"
+                    android:textStyle="bold" />
 
-</LinearLayout>
+            </LinearLayout>
 
             <!--Show Image and Price-->
             <LinearLayout
-                android:layout_marginTop="@dimen/dp25"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp25"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -106,21 +106,21 @@
                     android:layout_height="@dimen/dp100" />
 
                 <TextView
-                    android:textColor="@color/colorSecondary"
-                    android:id="@+id/txttotelPrice"
+                    android:id="@+id/txtTotalPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/dp25"
                     android:text="ราคา: 100฿"
+                    android:textColor="@color/colorSecondary"
                     android:textSize="@dimen/h1"
                     android:textStyle="bold" />
 
             </LinearLayout>
             <!--Topping-->
             <LinearLayout
-               android:layout_marginTop="@dimen/h2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/h2"
                 android:orientation="horizontal">
 
                 <TextView
@@ -139,32 +139,28 @@
             </LinearLayout>
             <!--Special-->
             <LinearLayout
-                android:layout_marginTop="@dimen/h2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/h2"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="ขนาด"
-                    android:textSize="@dimen/h1" />
-
                 <CheckBox
-                    android:layout_marginLeft="@dimen/h2"
-                    android:id="@+id/checSimple"
+                    android:id="@+id/chbSpecial"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="20sp">
+                    android:layout_marginLeft="@dimen/h2"
+                    android:padding="20sp"
+                    android:text="พิเศษ"
+                    android:textSize="@dimen/h2">
                 </CheckBox>
 
 
             </LinearLayout>
             <!--Item-->
             <LinearLayout
-                android:layout_marginTop="@dimen/h2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/h2"
                 android:orientation="horizontal">
 
                 <TextView
@@ -174,19 +170,19 @@
                     android:textSize="@dimen/h1" />
 
                 <Spinner
-                    android:layout_marginLeft="@dimen/h2"
                     android:id="@+id/spnItem"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/h2"
                     android:padding="20sp">
                 </Spinner>
 
             </LinearLayout>
             <!--Time-->
             <LinearLayout
-                android:layout_marginTop="@dimen/h2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/h2"
                 android:orientation="horizontal">
 
                 <TextView
@@ -196,43 +192,44 @@
                     android:textSize="@dimen/h1" />
 
                 <Spinner
-                    android:layout_marginLeft="@dimen/h2"
                     android:id="@+id/spnTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="20sp">
+                    android:layout_marginLeft="@dimen/h2"
+                    android:padding="20sp">x
                 </Spinner>
 
             </LinearLayout>
 
             <!--Delivery-->
-  <LinearLayout
-                android:layout_marginTop="@dimen/h2"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginTop="@dimen/h2">
 
                 <TextView
+                    android:textStyle="bold"
+                    android:id="@+id/txtShowTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="รับอาหาร"
-                    android:textSize="@dimen/h1" />
+                    android:textSize="@dimen/h2" />
 
-                <Spinner
-                    android:layout_marginLeft="@dimen/h2"
-                    android:id="@+id/spnDelivery"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="20sp">
-                </Spinner>
+                <ImageView
+                    android:id="@+id/imvChooseTime"
+                    android:layout_alignParentRight="true"
+                    android:src="@mipmap/ic_authen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
-
-
-
-
-
+            <CheckBox
+                android:id="@+id/chbDelivery"
+                android:textSize="@dimen/h2"
+                android:text="@string/dev2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
